3° Commit New Collab the commit message for your changes. Lines starting

--- a/sirh-gestion-personnel/src/main/webapp/WEB-INF/web.xml
+++ b/sirh-gestion-personnel/src/main/webapp/WEB-INF/web.xml
@@ -23,5 +23,14 @@
 		<url-pattern>/collaborateurs/editer</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>CreerCollaborateursController</servlet-name>
+		<servlet-class>dev.sgp.web.CreerCollaborateursController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreerCollaborateursController</servlet-name>
+		<url-pattern>/collaborateurs/creer</url-pattern>
+	</servlet-mapping>
+	
 
 </web-app>
